# tidal2d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PKGBUILD  README.md  ase.c  builddeps.sh  embedded_assets.h  ideas.txt  index.html  makefile
.github/workflows/: c-cpp.yml  gba.yml  linux.yml  macos.yml  ubuntu.yml  web.yml  windows.yml
decoder/: CMakeLists.txt  common.h  decoder.c  pch.c  types.c
engine/: CMakeLists.txt  actions.c  actions.h  common.h  engine.c  engine.h  pch.c  wrapper.c
example/: deer.json  hello.lua  obstacle.json  obstacle_t.json  rocket.json  room.json  thrust.sfx
src/: actions.c  actions.h  assets.c  assets.h  common.c  common.h  embedded_assets.h  engine.c  engine.h  events.c  events.h  filesystem.c  filesystem.h  fonts.c  fonts.h  instance.c  instance.h  libSDL2.so.init.c  libSDL2.so.tramp.S  libchipmunk.so.init.c  libchipmunk.so.tramp.S  main.c  main.cc  physics.c  physics.h  sfx.h  stbttf.c  stbttf.h  tidal.c  tidal.cc  tidal.h  zpl.c  zpl.h
